WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202039
REGRESSION (iOS 13): Trying to record just audio using HTML Media Capture crashes Safari
https://bugs.webkit.org/show_bug.cgi?id=202039
Summary
REGRESSION (iOS 13): Trying to record just audio using HTML Media Capture cra...
octavn
Reported
2019-09-20 01:56:04 PDT
Trying to record just audio using HTML Media Capture `<input type="file" accept="audio/*" capture>` crashes Safari 13 on iOS 13. Here's a video:
https://www.dropbox.com/s/uxh87cjgejo9gl1/RPReplay_Final1568968016.MP4?dl=0
It happened during the betas and I hoped it will get fixed for the final build but it didn't. In iOS 12 it did not crash, the camera app showed up and allowed you to record a video or take a photo (which is also a bug because you're supposed to record audio with the code above, not video, not photos).
Attachments
Patch
(5.43 KB, patch)
2019-09-26 13:49 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
octavn
Comment 1
2019-09-20 01:58:15 PDT
Steps to reproduce: 1. Go to
http://anssiko.github.io/html-media-capture/
using Safari 13 on iOS 13 or iPad OS 13 2. Scroll down to Example 3: `<input type="file" accept="audio/*" capture>` 3. Click [Choose File] 4. Safari will crash
Radar WebKit Bug Importer
Comment 2
2019-09-20 11:30:59 PDT
<
rdar://problem/55566628
>
Eric Carlson
Comment 3
2019-09-26 13:49:30 PDT
Created
attachment 379674
[details]
Patch
WebKit Commit Bot
Comment 4
2019-09-26 20:00:17 PDT
Comment on
attachment 379674
[details]
Patch Clearing flags on attachment: 379674 Committed
r250410
: <
https://trac.webkit.org/changeset/250410
>
WebKit Commit Bot
Comment 5
2019-09-26 20:00:18 PDT
All reviewed patches have been landed. Closing bug.
octavn
Comment 6
2019-10-16 05:16:46 PDT
Still happens on Safari on iPad OS 13.1.3
Simon Fraser (smfr)
Comment 7
2019-10-16 13:54:45 PDT
When a fix is committed to the WebKit repo, it can be some time before it's picked up in an OS release, and that timing is not something that Apple employees can talk about.
octavn
Comment 8
2019-12-17 06:41:03 PST
iOS 13.3, issue is still not fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug