REGRESSION (iOS 13): Trying to record just audio using HTML Media Capture crashes Safari https://bugs.webkit.org/show_bug.cgi?id=202039 <rdar://problem/55566628>

Reviewed by Jer Noble.

Source/WebKit:

* UIProcess/ios/forms/WKFileUploadPanel.mm:
(-[WKFileUploadPanel _mediaTypesForPickerSourceType:]): UIImagePickerController doesn't
support audio-only recording, so show the video recorder for "audio/*".

LayoutTests:

* fast/forms/ios/file-upload-panel-capture-expected.txt: Added.
* fast/forms/ios/file-upload-panel-capture.html: Added.


Canonical link: https://commits.webkit.org/215840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250410 268f45cc-cd09-0410-ab3c-d52691b4dbfc